// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Original Components/Menu Disabled Menu 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-7 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #ffffff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                    data-testid="_avatar"
                  >
                    TC
                  </div>
                  <span>
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Original Components/Menu Menu with avatar and different button colour 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-7 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #ffffff;
}

.emotion-23 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-23 path {
  fill: #1249C4;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                    data-testid="_avatar"
                  >
                    TC
                  </div>
                  <span>
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                    data-testid="_avatar"
                  >
                    <img
                      src="https://mui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                  <span>
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-23"
                      />
                    </span>
                  </div>
                  <span>
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-23"
                      />
                    </span>
                  </div>
                  <span>
                    <span>
                      Tom Cruise
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Original Components/Menu Menu with option icon and different colour 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-5:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-5:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-5:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-7 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: #1249C4;
}

.emotion-11 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-11 path {
  fill: #ffffff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-9"
                      />
                    </span>
                  </div>
                  <span>
                    <span>
                      More
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-9"
                      />
                    </span>
                  </div>
                  <span>
                    <span>
                      More
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <button
                className="emotion-5"
                data-testid="button"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="emotion-6"
                >
                  <div
                    className="emotion-7"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-9"
                      />
                    </span>
                  </div>
                  <span>
                    <span>
                      More
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-11"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Original Components/Menu Menu with selection handler 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div>
      <div>
        Selected: 
        <b>
          -
        </b>
      </div>
      <div>
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <button
              className="emotion-4"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="emotion-5"
              >
                <span>
                  <span>
                    More
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
